[project]
name = "comfyui-unload-model-with-pass-through"
description = "Forked from: https://github.com/SeanScripts/ComfyUI-Unload-Model. This fork add more control over node execution order."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/kildom/ComfyUI-Unload-Model-With-Pass-Through"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kildom"
DisplayName = "ComfyUI-Unload-Model-With-Pass-Through"
Icon = ""
